UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/PSROrderUpdate__e.object-meta.xml
<CustomObject>
    <description>Subscribes M6 BCN Complete events from M6 and Process to Wait for BCN Complete Orchestration Item</description>
    <label>PSROrderUpdate</label>
    <pluralLabel>PSROrderUpdates</pluralLabel>
</CustomObject>