UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <label>ApplicationId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>