UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/Circuitid__c.field-meta.xml
<CustomField>
    <fullName>Circuitid__c</fullName>
    <label>Circuitid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>