UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>DueDate</label>
    <type>Date</type>
</CustomField>