UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>EmployeeId__c</fullName>
    <label>EmployeeId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>