UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/JSONInput__c.field-meta.xml
<CustomField>
    <fullName>JSONInput__c</fullName>
    <label>JSONInput</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>