UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order_Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>