UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/OrderDescription__c.field-meta.xml
<CustomField>
    <fullName>OrderDescription__c</fullName>
    <label>OrderDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>