UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <label>OrderType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>