UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Plan_Id__c</fullName>
    <label>Plan_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>