UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/PSROrderId__c.field-meta.xml
<CustomField>
    <fullName>PSROrderId__c</fullName>
    <label>PSROrderId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>