UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/PSROrderStatus__c.field-meta.xml
<CustomField>
    <fullName>PSROrderStatus__c</fullName>
    <label>PSROrderStatus</label>
    <length>60</length>
    <type>Text</type>
</CustomField>