UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/PurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderNumber__c</fullName>
    <label>PurchaseOrderNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>