UCF-APR2.4/ftr main/force-app/main/default/objects/PSROrderUpdate__e/fields/RUID1_CircuitId__c.field-meta.xml
<CustomField>
    <fullName>RUID1_CircuitId__c</fullName>
    <label>RUID1_CircuitId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>